Lexer/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    AS
    ASSERT
    CLASS
    DEL
    ELIF
    EXCEPT
    EXEC
    FINALLY
    FROM
    GLOBAL
    IMPORT
    IS
    LAMBDA
    PASS
    RAISE
    TRY
    WITH
    YIELD
    PLUSEQUAL
    MINEQUAL
    STAREQUAL
    SLASHEQUAL
    PERCENTEQUAL
    STARSTAR
    SLASHSLASH
    STARSTAREQUAL
    SLASHSLASHEQUAL
    SEMI
    DOT
    BACKQUOTE
    TILDE
    AT
    LBRACE
    RBRACE
    INUMBER
    BINARYNUMBER
    OCTALNUMBER
    HEXADECIMALNUMBER
    RAWSTRING
    UNICODESTRING
    WS

Grammar

Rule 0     S' -> file_input
Rule 1     file_input -> single_stmt ENDMARKER
Rule 2     single_stmt -> single_stmt NEWLINE
Rule 3     single_stmt -> <empty>
Rule 4     single_stmt -> single_stmt stmt
Rule 5     funcdef -> DEF NAME MarkerScope parameters MarkerArg COLON suite
Rule 6     MarkerScope -> <empty>
Rule 7     MarkerArg -> <empty>
Rule 8     parameters -> LPAREN RPAREN
Rule 9     parameters -> LPAREN varargslist RPAREN
Rule 10    function_call -> NAME LPAREN RPAREN
Rule 11    function_call -> NAME LPAREN testlist RPAREN
Rule 12    varargslist -> fpdef
Rule 13    varargslist -> fpdef EQUAL test
Rule 14    varargslist -> fpdef COMMA varargslist
Rule 15    varargslist -> fpdef EQUAL test COMMA varargslist
Rule 16    fpdef -> NAME
Rule 17    fpdef -> LPAREN fplist RPAREN
Rule 18    fplist -> fpdef
Rule 19    fplist -> fpdef COMMA fplist
Rule 20    stmt -> simple_stmt
Rule 21    stmt -> compound_stmt
Rule 22    simple_stmt -> small_stmts NEWLINE
Rule 23    small_stmts -> small_stmt
Rule 24    small_stmt -> flow_stmt Marker
Rule 25    small_stmt -> expr_stmt Marker
Rule 26    small_stmt -> print_stmt Marker
Rule 27    expr_stmt -> test EQUAL test
Rule 28    expr_stmt -> test EQUAL function_call
Rule 29    print_stmt -> PRINT
Rule 30    print_stmt -> PRINT testlist
Rule 31    flow_stmt -> break_stmt Marker
Rule 32    flow_stmt -> return_stmt Marker
Rule 33    flow_stmt -> continue_stmt Marker
Rule 34    break_stmt -> BREAK
Rule 35    continue_stmt -> CONTINUE
Rule 36    return_stmt -> RETURN
Rule 37    return_stmt -> RETURN test
Rule 38    compound_stmt -> if_stmt Marker
Rule 39    compound_stmt -> for_stmt Marker
Rule 40    compound_stmt -> while_stmt Marker
Rule 41    compound_stmt -> funcdef Marker
Rule 42    compound_stmt -> function_call Marker
Rule 43    if_stmt -> IF test COLON MarkerIf suite
Rule 44    if_stmt -> IF test COLON MarkerIf suite ELSE COLON MarkerElse suite
Rule 45    while_stmt -> WHILE Marker test COLON MarkerWhile suite
Rule 46    Marker -> <empty>
Rule 47    MarkerWhile -> <empty>
Rule 48    MarkerIf -> <empty>
Rule 49    MarkerElse -> <empty>
Rule 50    for_stmt -> FOR atom IN test COLON MarkerFor suite
Rule 51    MarkerFor -> <empty>
Rule 52    suite -> simple_stmt
Rule 53    suite -> NEWLINE INDENT stmts DEDENT
Rule 54    test -> test_expr
Rule 55    test_expr -> or_test
Rule 56    or_test -> and_test
Rule 57    or_test -> and_test OR or_test
Rule 58    and_test -> not_test
Rule 59    and_test -> not_test AND and_test
Rule 60    not_test -> NOT not_test
Rule 61    not_test -> comparison
Rule 62    comparison -> expr
Rule 63    comparison -> expr comp_op expr
Rule 64    comp_op -> LESS
Rule 65    comp_op -> GREATER
Rule 66    comp_op -> EQEQUAL
Rule 67    comp_op -> GREATEREQUAL
Rule 68    comp_op -> LESSEQUAL
Rule 69    comp_op -> NOTEQUAL
Rule 70    expr -> xor_expr
Rule 71    expr -> xor_expr VBAR expr
Rule 72    xor_expr -> and_expr
Rule 73    xor_expr -> and_expr CIRCUMFLEX xor_expr
Rule 74    and_expr -> shift_expr
Rule 75    and_expr -> shift_expr AMPER and_expr
Rule 76    shift_expr -> arith_expr
Rule 77    shift_expr -> arith_expr LEFTSHIFT shift_expr
Rule 78    shift_expr -> arith_expr RIGHTSHIFT shift_expr
Rule 79    arith_expr -> term
Rule 80    arith_expr -> term PLUS arith_expr
Rule 81    arith_expr -> term MINUS arith_expr
Rule 82    term -> factor
Rule 83    term -> factor STAR term
Rule 84    term -> factor SLASH term
Rule 85    term -> factor PERCENT term
Rule 86    factor -> power
Rule 87    factor -> PLUS factor
Rule 88    factor -> MINUS factor
Rule 89    power -> atom
Rule 90    power -> atom LSQB test RSQB
Rule 91    atom -> NAME
Rule 92    atom -> NUMBER
Rule 93    atom -> STRING
Rule 94    atom -> TRIPLESTRING
Rule 95    atom -> FNUMBER
Rule 96    atom -> LSQB RSQB
Rule 97    atom -> LSQB listmaker RSQB
Rule 98    atom -> LPAREN RPAREN
Rule 99    atom -> LPAREN testlist_comp RPAREN
Rule 100   listmaker -> test
Rule 101   listmaker -> test COMMA listmaker
Rule 102   testlist_comp -> test
Rule 103   testlist_comp -> test COMMA testlist_comp
Rule 104   testlist -> test
Rule 105   testlist -> test COMMA testlist
Rule 106   stmts -> stmt stmts
Rule 107   stmts -> stmt Marker

Terminals, with rules where they appear

AMPER                : 75
AND                  : 59
AS                   : 
ASSERT               : 
AT                   : 
BACKQUOTE            : 
BINARYNUMBER         : 
BREAK                : 34
CIRCUMFLEX           : 73
CLASS                : 
COLON                : 5 43 44 44 45 50
COMMA                : 14 15 19 101 103 105
CONTINUE             : 35
DEDENT               : 53
DEF                  : 5
DEL                  : 
DOT                  : 
ELIF                 : 
ELSE                 : 44
ENDMARKER            : 1
EQEQUAL              : 66
EQUAL                : 13 15 27 28
EXCEPT               : 
EXEC                 : 
FINALLY              : 
FNUMBER              : 95
FOR                  : 50
FROM                 : 
GLOBAL               : 
GREATER              : 65
GREATEREQUAL         : 67
HEXADECIMALNUMBER    : 
IF                   : 43 44
IMPORT               : 
IN                   : 50
INDENT               : 53
INUMBER              : 
IS                   : 
LAMBDA               : 
LBRACE               : 
LEFTSHIFT            : 77
LESS                 : 64
LESSEQUAL            : 68
LPAREN               : 8 9 10 11 17 98 99
LSQB                 : 90 96 97
MINEQUAL             : 
MINUS                : 81 88
NAME                 : 5 10 11 16 91
NEWLINE              : 2 22 53
NOT                  : 60
NOTEQUAL             : 69
NUMBER               : 92
OCTALNUMBER          : 
OR                   : 57
PASS                 : 
PERCENT              : 85
PERCENTEQUAL         : 
PLUS                 : 80 87
PLUSEQUAL            : 
PRINT                : 29 30
RAISE                : 
RAWSTRING            : 
RBRACE               : 
RETURN               : 36 37
RIGHTSHIFT           : 78
RPAREN               : 8 9 10 11 17 98 99
RSQB                 : 90 96 97
SEMI                 : 
SLASH                : 84
SLASHEQUAL           : 
SLASHSLASH           : 
SLASHSLASHEQUAL      : 
STAR                 : 83
STAREQUAL            : 
STARSTAR             : 
STARSTAREQUAL        : 
STRING               : 93
TILDE                : 
TRIPLESTRING         : 94
TRY                  : 
UNICODESTRING        : 
VBAR                 : 71
WHILE                : 45
WITH                 : 
WS                   : 
YIELD                : 
error                : 

Nonterminals, with rules where they appear

Marker               : 24 25 26 31 32 33 38 39 40 41 42 45 107
MarkerArg            : 5
MarkerElse           : 44
MarkerFor            : 50
MarkerIf             : 43 44
MarkerScope          : 5
MarkerWhile          : 45
and_expr             : 72 73 75
and_test             : 56 57 59
arith_expr           : 76 77 78 80 81
atom                 : 50 89 90
break_stmt           : 31
comp_op              : 63
comparison           : 61
compound_stmt        : 21
continue_stmt        : 33
expr                 : 62 63 63 71
expr_stmt            : 25
factor               : 82 83 84 85 87 88
file_input           : 0
flow_stmt            : 24
for_stmt             : 39
fpdef                : 12 13 14 15 18 19
fplist               : 17 19
funcdef              : 41
function_call        : 28 42
if_stmt              : 38
listmaker            : 97 101
not_test             : 58 59 60
or_test              : 55 57
parameters           : 5
power                : 86
print_stmt           : 26
return_stmt          : 32
shift_expr           : 74 75 77 78
simple_stmt          : 20 52
single_stmt          : 1 2 4
small_stmt           : 23
small_stmts          : 22
stmt                 : 4 106 107
stmts                : 53 106
suite                : 5 43 44 44 45 50
term                 : 79 80 81 83 84 85
test                 : 13 15 27 27 28 37 43 44 45 50 90 100 101 102 103 104 105
test_expr            : 54
testlist             : 11 30 105
testlist_comp        : 99 103
varargslist          : 9 14 15
while_stmt           : 40
xor_expr             : 70 71 73

Parsing method: LALR

state 0

    (0) S' -> . file_input
    (1) file_input -> . single_stmt ENDMARKER
    (2) single_stmt -> . single_stmt NEWLINE
    (3) single_stmt -> .
    (4) single_stmt -> . single_stmt stmt

    ENDMARKER       reduce using rule 3 (single_stmt -> .)
    NEWLINE         reduce using rule 3 (single_stmt -> .)
    IF              reduce using rule 3 (single_stmt -> .)
    FOR             reduce using rule 3 (single_stmt -> .)
    WHILE           reduce using rule 3 (single_stmt -> .)
    DEF             reduce using rule 3 (single_stmt -> .)
    NAME            reduce using rule 3 (single_stmt -> .)
    PRINT           reduce using rule 3 (single_stmt -> .)
    BREAK           reduce using rule 3 (single_stmt -> .)
    RETURN          reduce using rule 3 (single_stmt -> .)
    CONTINUE        reduce using rule 3 (single_stmt -> .)
    NOT             reduce using rule 3 (single_stmt -> .)
    PLUS            reduce using rule 3 (single_stmt -> .)
    MINUS           reduce using rule 3 (single_stmt -> .)
    NUMBER          reduce using rule 3 (single_stmt -> .)
    STRING          reduce using rule 3 (single_stmt -> .)
    TRIPLESTRING    reduce using rule 3 (single_stmt -> .)
    FNUMBER         reduce using rule 3 (single_stmt -> .)
    LSQB            reduce using rule 3 (single_stmt -> .)
    LPAREN          reduce using rule 3 (single_stmt -> .)

    file_input                     shift and go to state 1
    single_stmt                    shift and go to state 2

state 1

    (0) S' -> file_input .



state 2

    (1) file_input -> single_stmt . ENDMARKER
    (2) single_stmt -> single_stmt . NEWLINE
    (4) single_stmt -> single_stmt . stmt
    (20) stmt -> . simple_stmt
    (21) stmt -> . compound_stmt
    (22) simple_stmt -> . small_stmts NEWLINE
    (38) compound_stmt -> . if_stmt Marker
    (39) compound_stmt -> . for_stmt Marker
    (40) compound_stmt -> . while_stmt Marker
    (41) compound_stmt -> . funcdef Marker
    (42) compound_stmt -> . function_call Marker
    (23) small_stmts -> . small_stmt
    (43) if_stmt -> . IF test COLON MarkerIf suite
    (44) if_stmt -> . IF test COLON MarkerIf suite ELSE COLON MarkerElse suite
    (50) for_stmt -> . FOR atom IN test COLON MarkerFor suite
    (45) while_stmt -> . WHILE Marker test COLON MarkerWhile suite
    (5) funcdef -> . DEF NAME MarkerScope parameters MarkerArg COLON suite
    (10) function_call -> . NAME LPAREN RPAREN
    (11) function_call -> . NAME LPAREN testlist RPAREN
    (24) small_stmt -> . flow_stmt Marker
    (25) small_stmt -> . expr_stmt Marker
    (26) small_stmt -> . print_stmt Marker
    (31) flow_stmt -> . break_stmt Marker
    (32) flow_stmt -> . return_stmt Marker
    (33) flow_stmt -> . continue_stmt Marker
    (27) expr_stmt -> . test EQUAL test
    (28) expr_stmt -> . test EQUAL function_call
    (29) print_stmt -> . PRINT
    (30) print_stmt -> . PRINT testlist
    (34) break_stmt -> . BREAK
    (36) return_stmt -> . RETURN
    (37) return_stmt -> . RETURN test
    (35) continue_stmt -> . CONTINUE
    (54) test -> . test_expr
    (55) test_expr -> . or_test
    (56) or_test -> . and_test
    (57) or_test -> . and_test OR or_test
    (58) and_test -> . not_test
    (59) and_test -> . not_test AND and_test
    (60) not_test -> . NOT not_test
    (61) not_test -> . comparison
    (62) comparison -> . expr
    (63) comparison -> . expr comp_op expr
    (70) expr -> . xor_expr
    (71) expr -> . xor_expr VBAR expr
    (72) xor_expr -> . and_expr
    (73) xor_expr -> . and_expr CIRCUMFLEX xor_expr
    (74) and_expr -> . shift_expr
    (75) and_expr -> . shift_expr AMPER and_expr
    (76) shift_expr -> . arith_expr
    (77) shift_expr -> . arith_expr LEFTSHIFT shift_expr
    (78) shift_expr -> . arith_expr RIGHTSHIFT shift_expr
    (79) arith_expr -> . term
    (80) arith_expr -> . term PLUS arith_expr
    (81) arith_expr -> . term MINUS arith_expr
    (82) term -> . factor
    (83) term -> . factor STAR term
    (84) term -> . factor SLASH term
    (85) term -> . factor PERCENT term
    (86) factor -> . power
    (87) factor -> . PLUS factor
    (88) factor -> . MINUS factor
    (89) power -> . atom
    (90) power -> . atom LSQB test RSQB
    (91) atom -> . NAME
    (92) atom -> . NUMBER
    (93) atom -> . STRING
    (94) atom -> . TRIPLESTRING
    (95) atom -> . FNUMBER
    (96) atom -> . LSQB RSQB
    (97) atom -> . LSQB listmaker RSQB
    (98) atom -> . LPAREN RPAREN
    (99) atom -> . LPAREN testlist_comp RPAREN

    ENDMARKER       shift and go to state 3
    NEWLINE         shift and go to state 4
    IF              shift and go to state 15
    FOR             shift and go to state 17
    WHILE           shift and go to state 19
    DEF             shift and go to state 20
    NAME            shift and go to state 21
    PRINT           shift and go to state 29
    BREAK           shift and go to state 30
    RETURN          shift and go to state 31
    CONTINUE        shift and go to state 32
    NOT             shift and go to state 37
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    NUMBER          shift and go to state 50
    STRING          shift and go to state 51
    TRIPLESTRING    shift and go to state 52
    FNUMBER         shift and go to state 53
    LSQB            shift and go to state 49
    LPAREN          shift and go to state 22

    stmt                           shift and go to state 5
    simple_stmt                    shift and go to state 6
    compound_stmt                  shift and go to state 7
    small_stmts                    shift and go to state 8
    if_stmt                        shift and go to state 9
    for_stmt                       shift and go to state 10
    while_stmt                     shift and go to state 11
    funcdef                        shift and go to state 12
    function_call                  shift and go to state 13
    small_stmt                     shift and go to state 14
    test                           shift and go to state 16
    atom                           shift and go to state 18
    flow_stmt                      shift and go to state 23
    expr_stmt                      shift and go to state 24
    print_stmt                     shift and go to state 25
    break_stmt                     shift and go to state 26
    return_stmt                    shift and go to state 27
    continue_stmt                  shift and go to state 28
    test_expr                      shift and go to state 33
    or_test                        shift and go to state 34
    and_test                       shift and go to state 35
    not_test                       shift and go to state 36
    comparison                     shift and go to state 38
    expr                           shift and go to state 39
    xor_expr                       shift and go to state 40
    and_expr                       shift and go to state 41
    shift_expr                     shift and go to state 42
    arith_expr                     shift and go to state 43
    term                           shift and go to state 44
    factor                         shift and go to state 47
    power                          shift and go to state 48

state 3

    (1) file_input -> single_stmt ENDMARKER .

    $end            reduce using rule 1 (file_input -> single_stmt ENDMARKER .)


state 4

    (2) single_stmt -> single_stmt NEWLINE .

    ENDMARKER       reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    NEWLINE         reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    IF              reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    FOR             reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    WHILE           reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    DEF             reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    NAME            reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    PRINT           reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    BREAK           reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    RETURN          reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    CONTINUE        reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    NOT             reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    PLUS            reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    MINUS           reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    NUMBER          reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    STRING          reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    TRIPLESTRING    reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    FNUMBER         reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    LSQB            reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    LPAREN          reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)


state 5

    (4) single_stmt -> single_stmt stmt .

    ENDMARKER       reduce using rule 4 (single_stmt -> single_stmt stmt .)
    NEWLINE         reduce using rule 4 (single_stmt -> single_stmt stmt .)
    IF              reduce using rule 4 (single_stmt -> single_stmt stmt .)
    FOR             reduce using rule 4 (single_stmt -> single_stmt stmt .)
    WHILE           reduce using rule 4 (single_stmt -> single_stmt stmt .)
    DEF             reduce using rule 4 (single_stmt -> single_stmt stmt .)
    NAME            reduce using rule 4 (single_stmt -> single_stmt stmt .)
    PRINT           reduce using rule 4 (single_stmt -> single_stmt stmt .)
    BREAK           reduce using rule 4 (single_stmt -> single_stmt stmt .)
    RETURN          reduce using rule 4 (single_stmt -> single_stmt stmt .)
    CONTINUE        reduce using rule 4 (single_stmt -> single_stmt stmt .)
    NOT             reduce using rule 4 (single_stmt -> single_stmt stmt .)
    PLUS            reduce using rule 4 (single_stmt -> single_stmt stmt .)
    MINUS           reduce using rule 4 (single_stmt -> single_stmt stmt .)
    NUMBER          reduce using rule 4 (single_stmt -> single_stmt stmt .)
    STRING          reduce using rule 4 (single_stmt -> single_stmt stmt .)
    TRIPLESTRING    reduce using rule 4 (single_stmt -> single_stmt stmt .)
    FNUMBER         reduce using rule 4 (single_stmt -> single_stmt stmt .)
    LSQB            reduce using rule 4 (single_stmt -> single_stmt stmt .)
    LPAREN          reduce using rule 4 (single_stmt -> single_stmt stmt .)


state 6

    (20) stmt -> simple_stmt .

    ENDMARKER       reduce using rule 20 (stmt -> simple_stmt .)
    NEWLINE         reduce using rule 20 (stmt -> simple_stmt .)
    IF              reduce using rule 20 (stmt -> simple_stmt .)
    FOR             reduce using rule 20 (stmt -> simple_stmt .)
    WHILE           reduce using rule 20 (stmt -> simple_stmt .)
    DEF             reduce using rule 20 (stmt -> simple_stmt .)
    NAME            reduce using rule 20 (stmt -> simple_stmt .)
    PRINT           reduce using rule 20 (stmt -> simple_stmt .)
    BREAK           reduce using rule 20 (stmt -> simple_stmt .)
    RETURN          reduce using rule 20 (stmt -> simple_stmt .)
    CONTINUE        reduce using rule 20 (stmt -> simple_stmt .)
    NOT             reduce using rule 20 (stmt -> simple_stmt .)
    PLUS            reduce using rule 20 (stmt -> simple_stmt .)
    MINUS           reduce using rule 20 (stmt -> simple_stmt .)
    NUMBER          reduce using rule 20 (stmt -> simple_stmt .)
    STRING          reduce using rule 20 (stmt -> simple_stmt .)
    TRIPLESTRING    reduce using rule 20 (stmt -> simple_stmt .)
    FNUMBER         reduce using rule 20 (stmt -> simple_stmt .)
    LSQB            reduce using rule 20 (stmt -> simple_stmt .)
    LPAREN          reduce using rule 20 (stmt -> simple_stmt .)
    DEDENT          reduce using rule 20 (stmt -> simple_stmt .)


state 7

    (21) stmt -> compound_stmt .

    ENDMARKER       reduce using rule 21 (stmt -> compound_stmt .)
    NEWLINE         reduce using rule 21 (stmt -> compound_stmt .)
    IF              reduce using rule 21 (stmt -> compound_stmt .)
    FOR             reduce using rule 21 (stmt -> compound_stmt .)
    WHILE           reduce using rule 21 (stmt -> compound_stmt .)
    DEF             reduce using rule 21 (stmt -> compound_stmt .)
    NAME            reduce using rule 21 (stmt -> compound_stmt .)
    PRINT           reduce using rule 21 (stmt -> compound_stmt .)
    BREAK           reduce using rule 21 (stmt -> compound_stmt .)
    RETURN          reduce using rule 21 (stmt -> compound_stmt .)
    CONTINUE        reduce using rule 21 (stmt -> compound_stmt .)
    NOT             reduce using rule 21 (stmt -> compound_stmt .)
    PLUS            reduce using rule 21 (stmt -> compound_stmt .)
    MINUS           reduce using rule 21 (stmt -> compound_stmt .)
    NUMBER          reduce using rule 21 (stmt -> compound_stmt .)
    STRING          reduce using rule 21 (stmt -> compound_stmt .)
    TRIPLESTRING    reduce using rule 21 (stmt -> compound_stmt .)
    FNUMBER         reduce using rule 21 (stmt -> compound_stmt .)
    LSQB            reduce using rule 21 (stmt -> compound_stmt .)
    LPAREN          reduce using rule 21 (stmt -> compound_stmt .)
    DEDENT          reduce using rule 21 (stmt -> compound_stmt .)


state 8

    (22) simple_stmt -> small_stmts . NEWLINE

    NEWLINE         shift and go to state 54


state 9

    (38) compound_stmt -> if_stmt . Marker
    (46) Marker -> .

    ENDMARKER       reduce using rule 46 (Marker -> .)
    NEWLINE         reduce using rule 46 (Marker -> .)
    IF              reduce using rule 46 (Marker -> .)
    FOR             reduce using rule 46 (Marker -> .)
    WHILE           reduce using rule 46 (Marker -> .)
    DEF             reduce using rule 46 (Marker -> .)
    NAME            reduce using rule 46 (Marker -> .)
    PRINT           reduce using rule 46 (Marker -> .)
    BREAK           reduce using rule 46 (Marker -> .)
    RETURN          reduce using rule 46 (Marker -> .)
    CONTINUE        reduce using rule 46 (Marker -> .)
    NOT             reduce using rule 46 (Marker -> .)
    PLUS            reduce using rule 46 (Marker -> .)
    MINUS           reduce using rule 46 (Marker -> .)
    NUMBER          reduce using rule 46 (Marker -> .)
    STRING          reduce using rule 46 (Marker -> .)
    TRIPLESTRING    reduce using rule 46 (Marker -> .)
    FNUMBER         reduce using rule 46 (Marker -> .)
    LSQB            reduce using rule 46 (Marker -> .)
    LPAREN          reduce using rule 46 (Marker -> .)
    DEDENT          reduce using rule 46 (Marker -> .)

    Marker                         shift and go to state 55

state 10

    (39) compound_stmt -> for_stmt . Marker
    (46) Marker -> .

    ENDMARKER       reduce using rule 46 (Marker -> .)
    NEWLINE         reduce using rule 46 (Marker -> .)
    IF              reduce using rule 46 (Marker -> .)
    FOR             reduce using rule 46 (Marker -> .)
    WHILE           reduce using rule 46 (Marker -> .)
    DEF             reduce using rule 46 (Marker -> .)
    NAME            reduce using rule 46 (Marker -> .)
    PRINT           reduce using rule 46 (Marker -> .)
    BREAK           reduce using rule 46 (Marker -> .)
    RETURN          reduce using rule 46 (Marker -> .)
    CONTINUE        reduce using rule 46 (Marker -> .)
    NOT             reduce using rule 46 (Marker -> .)
    PLUS            reduce using rule 46 (Marker -> .)
    MINUS           reduce using rule 46 (Marker -> .)
    NUMBER          reduce using rule 46 (Marker -> .)
    STRING          reduce using rule 46 (Marker -> .)
    TRIPLESTRING    reduce using rule 46 (Marker -> .)
    FNUMBER         reduce using rule 46 (Marker -> .)
    LSQB            reduce using rule 46 (Marker -> .)
    LPAREN          reduce using rule 46 (Marker -> .)
    DEDENT          reduce using rule 46 (Marker -> .)

    Marker                         shift and go to state 56

state 11

    (40) compound_stmt -> while_stmt . Marker
    (46) Marker -> .

    ENDMARKER       reduce using rule 46 (Marker -> .)
    NEWLINE         reduce using rule 46 (Marker -> .)
    IF              reduce using rule 46 (Marker -> .)
    FOR             reduce using rule 46 (Marker -> .)
    WHILE           reduce using rule 46 (Marker -> .)
    DEF             reduce using rule 46 (Marker -> .)
    NAME            reduce using rule 46 (Marker -> .)
    PRINT           reduce using rule 46 (Marker -> .)
    BREAK           reduce using rule 46 (Marker -> .)
    RETURN          reduce using rule 46 (Marker -> .)
    CONTINUE        reduce using rule 46 (Marker -> .)
    NOT             reduce using rule 46 (Marker -> .)
    PLUS            reduce using rule 46 (Marker -> .)
    MINUS           reduce using rule 46 (Marker -> .)
    NUMBER          reduce using rule 46 (Marker -> .)
    STRING          reduce using rule 46 (Marker -> .)
    TRIPLESTRING    reduce using rule 46 (Marker -> .)
    FNUMBER         reduce using rule 46 (Marker -> .)
    LSQB            reduce using rule 46 (Marker -> .)
    LPAREN          reduce using rule 46 (Marker -> .)
    DEDENT          reduce using rule 46 (Marker -> .)

    Marker                         shift and go to state 57

state 12

    (41) compound_stmt -> funcdef . Marker
    (46) Marker -> .

    ENDMARKER       reduce using rule 46 (Marker -> .)
    NEWLINE         reduce using rule 46 (Marker -> .)
    IF              reduce using rule 46 (Marker -> .)
    FOR             reduce using rule 46 (Marker -> .)
    WHILE           reduce using rule 46 (Marker -> .)
    DEF             reduce using rule 46 (Marker -> .)
    NAME            reduce using rule 46 (Marker -> .)
    PRINT           reduce using rule 46 (Marker -> .)
    BREAK           reduce using rule 46 (Marker -> .)
    RETURN          reduce using rule 46 (Marker -> .)
    CONTINUE        reduce using rule 46 (Marker -> .)
    NOT             reduce using rule 46 (Marker -> .)
    PLUS            reduce using rule 46 (Marker -> .)
    MINUS           reduce using rule 46 (Marker -> .)
    NUMBER          reduce using rule 46 (Marker -> .)
    STRING          reduce using rule 46 (Marker -> .)
    TRIPLESTRING    reduce using rule 46 (Marker -> .)
    FNUMBER         reduce using rule 46 (Marker -> .)
    LSQB            reduce using rule 46 (Marker -> .)
    LPAREN          reduce using rule 46 (Marker -> .)
    DEDENT          reduce using rule 46 (Marker -> .)

    Marker                         shift and go to state 58

state 13

    (42) compound_stmt -> function_call . Marker
    (46) Marker -> .

    ENDMARKER       reduce using rule 46 (Marker -> .)
    NEWLINE         reduce using rule 46 (Marker -> .)
    IF              reduce using rule 46 (Marker -> .)
    FOR             reduce using rule 46 (Marker -> .)
    WHILE           reduce using rule 46 (Marker -> .)
    DEF             reduce using rule 46 (Marker -> .)
    NAME            reduce using rule 46 (Marker -> .)
    PRINT           reduce using rule 46 (Marker -> .)
    BREAK           reduce using rule 46 (Marker -> .)
    RETURN          reduce using rule 46 (Marker -> .)
    CONTINUE        reduce using rule 46 (Marker -> .)
    NOT             reduce using rule 46 (Marker -> .)
    PLUS            reduce using rule 46 (Marker -> .)
    MINUS           reduce using rule 46 (Marker -> .)
    NUMBER          reduce using rule 46 (Marker -> .)
    STRING          reduce using rule 46 (Marker -> .)
    TRIPLESTRING    reduce using rule 46 (Marker -> .)
    FNUMBER         reduce using rule 46 (Marker -> .)
    LSQB            reduce using rule 46 (Marker -> .)
    LPAREN          reduce using rule 46 (Marker -> .)
    DEDENT          reduce using rule 46 (Marker -> .)

    Marker                         shift and go to state 59

state 14

    (23) small_stmts -> small_stmt .

    NEWLINE         reduce using rule 23 (small_stmts -> small_stmt .)


state 15

    (43) if_stmt -> IF . test COLON MarkerIf suite
    (44) if_stmt -> IF . test COLON MarkerIf suite ELSE COLON MarkerElse suite
    (54) test -> . test_expr
    (55) test_expr -> . or_test
    (56) or_test -> . and_test
    (57) or_test -> . and_test OR or_test
    (58) and_test -> . not_test
    (59) and_test -> . not_test AND and_test
    (60) not_test -> . NOT not_test
    (61) not_test -> . comparison
    (62) comparison -> . expr
    (63) comparison -> . expr comp_op expr
    (70) expr -> . xor_expr
    (71) expr -> . xor_expr VBAR expr
    (72) xor_expr -> . and_expr
    (73) xor_expr -> . and_expr CIRCUMFLEX xor_expr
    (74) and_expr -> . shift_expr
    (75) and_expr -> . shift_expr AMPER and_expr
    (76) shift_expr -> . arith_expr
    (77) shift_expr -> . arith_expr LEFTSHIFT shift_expr
    (78) shift_expr -> . arith_expr RIGHTSHIFT shift_expr
    (79) arith_expr -> . term
    (80) arith_expr -> . term PLUS arith_expr
    (81) arith_expr -> . term MINUS arith_expr
    (82) term -> . factor
    (83) term -> . factor STAR term
    (84) term -> . factor SLASH term
    (85) term -> . factor PERCENT term
    (86) factor -> . power
    (87) factor -> . PLUS factor
    (88) factor -> . MINUS factor
    (89) power -> . atom
    (90) power -> . atom LSQB test RSQB
    (91) atom -> . NAME
    (92) atom -> . NUMBER
    (93) atom -> . STRING
    (94) atom -> . TRIPLESTRING
    (95) atom -> . FNUMBER
    (96) atom -> . LSQB RSQB
    (97) atom -> . LSQB listmaker RSQB
    (98) atom -> . LPAREN RPAREN
    (99) atom -> . LPAREN testlist_comp RPAREN

    NOT             shift and go to state 37
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    NAME            shift and go to state 61
    NUMBER          shift and go to state 50
    STRING          shift and go to state 51
    TRIPLESTRING    shift and go to state 52
    FNUMBER         shift and go to state 53
    LSQB            shift and go to state 49
    LPAREN          shift and go to state 22

    test                           shift and go to state 60
    test_expr                      shift and go to state 33
    or_test                        shift and go to state 34
    and_test                       shift and go to state 35
    not_test                       shift and go to state 36
    comparison                     shift and go to state 38
    expr                           shift and go to state 39
    xor_expr                       shift and go to state 40
    and_expr                       shift and go to state 41
    shift_expr                     shift and go to state 42
    arith_expr                     shift and go to state 43
    term                           shift and go to state 44
    factor                         shift and go to state 47
    power                          shift and go to state 48
    atom                           shift and go to state 18

state 16

    (27) expr_stmt -> test . EQUAL test
    (28) expr_stmt -> test . EQUAL function_call

    EQUAL           shift and go to state 62


state 17

    (50) for_stmt -> FOR . atom IN test COLON MarkerFor suite
    (91) atom -> . NAME
    (92) atom -> . NUMBER
    (93) atom -> . STRING
    (94) atom -> . TRIPLESTRING
    (95) atom -> . FNUMBER
    (96) atom -> . LSQB RSQB
    (97) atom -> . LSQB listmaker RSQB
    (98) atom -> . LPAREN RPAREN
    (99) atom -> . LPAREN testlist_comp RPAREN

    NAME            shift and go to state 61
    NUMBER          shift and go to state 50
    STRING          shift and go to state 51
    TRIPLESTRING    shift and go to state 52
    FNUMBER         shift and go to state 53
    LSQB            shift and go to state 49
    LPAREN          shift and go to state 22

    atom                           shift and go to state 63

state 18

    (89) power -> atom .
    (90) power -> atom . LSQB test RSQB
